<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddBusinessCardActivity">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/fechar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/newcard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/nome"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cor_nome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/til_nome"
        app:layout_constraintTop_toTopOf="@id/til_nome"
        app:layout_constraintStart_toEndOf="@id/til_nome"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cor"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/til_nome"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cor_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_email"
        app:layout_constraintBottom_toBottomOf="@id/til_email"
        app:layout_constraintStart_toEndOf="@id/til_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cor"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/telefone"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cor_telefone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_telefone"
        app:layout_constraintBottom_toBottomOf="@id/til_telefone"
        app:layout_constraintStart_toEndOf="@id/til_telefone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cor"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_empresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/nome_da_empresa"
        app:layout_constraintTop_toBottomOf="@+id/til_telefone"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cor_empresa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cor"
        app:layout_constraintBottom_toBottomOf="@id/til_empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_empresa"
        app:layout_constraintTop_toTopOf="@id/til_empresa"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"/>


<!-- Corrigir e verificar como colocar uma imagem -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/sua_logo_aqui"
        app:layout_constraintTop_toBottomOf="@+id/til_empresa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"/>
    </com.google.android.material.textfield.TextInputLayout>

   <!-- Corrigir e verificar como colocar cor de fundo -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="16dp"
        android:hint="@string/escolha_a_cor_de_fundo"
        app:layout_constraintTop_toBottomOf="@+id/til_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"/>
    </com.google.android.material.textfield.TextInputLayout>



    <!-- Corrigir e verificar como colocar uma imagem de fundo -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_background"/>


</androidx.constraintlayout.widget.ConstraintLayout>